--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,5 +2,8 @@
 name = "gqltools"
 version = "0.1.0"
 authors = ["David Pedersen <david.pdrsn@gmail.com>"]
+edition = "2018"
 
 [dependencies]
+failure = "0.1.3"
+structopt = "0.2.13"
