--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,6 @@ edition = "2018"
 [dependencies]
 failure = "0.1.3"
 structopt = "0.2.13"
+regex = "1.0.6"
+lazy_static = "1.2.0"
+graphql-parser = "0.2.2"
