--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,9 +9,10 @@ failure = "0.1.3"
 structopt = "0.2.13"
 regex = "1.0.6"
 lazy_static = "1.2.0"
-graphql-parser = "0.2.2"
 term = "0.5.1"
 diff = "0.1"
 itertools = "0.7.11"
 reqwest = "0.9.5"
 serde_json = "1.0.33"
+graphql-parser = "0.2.2"
+glob = "0.2"
