--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,3 +17,6 @@ serde_json = "1.0.33"
 graphql-parser = "0.2.2"
 glob = "0.2"
 colored_json = "1.0.0"
+graphql_client_codegen = { path = "/Users/davidpdrsn/dev/reference/graphql-client/graphql_client_codegen" }
+syn = "0.15.26"
+colored = "1.7.0"
