--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,6 @@ serde_json = "1.0.33"
 graphql-parser = "0.2.2"
 glob = "0.2"
 colored_json = "1.0.0"
-graphql_client_codegen = { path = "/Users/davidpdrsn/dev/reference/graphql-client/graphql_client_codegen" }
+graphql_client_codegen = { git = "https://github.com/davidpdrsn/graphql-client.git" }
 syn = "0.15.26"
 colored = "1.7.0"
